2008-Aug-22  yselkowitz

	* lib/Makefile.am (cygclass_DATA): Don't install gst-plugins0.8.cygclass.

	* lib/gtk2-perl.cygclass: PODs and manpages build OOTB on 1.7.
	Inter-module linking fixed in perl 5.10.0-5 and EU::D 0.300-2.

	* bin/cygport.in (__mkdirs, __finish): Managed mounts are extinct.
	bin/Makefile.am: Do not install make_managed_mount.

	* bin/cygport.in: Only run on Cygwin 1.7.

	* bin/cygport.in (__prepinfo): Compress only *.info* files.

	* configure.in: Post-release version bump.

2008-Aug-19  yselkowitz

	* Branched 0.3.13 for cygwin-1.5; trunk is now for cygwin-1.7.